--- a/index.html
+++ b/index.html
@@ -1,9 +1,43 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>TerraSafaria</title>
+    <meta charset="UTF-8" />
+    <title>TerraSafaria Coffee</title>
+    <style>
+      body {
+        font-family: 'Segoe UI', sans-serif;
+        background-color: #fef9f4;
+        color: #3e2f21;
+        text-align: center;
+        padding: 40px;
+      }
+      h1 {
+        font-size: 3em;
+        margin-bottom: 10px;
+      }
+      p {
+        font-size: 1.2em;
+        margin-top: 5px;
+      }
+      .menu-button {
+        margin-top: 30px;
+        padding: 12px 24px;
+        font-size: 1em;
+        background-color: #6f4e37;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+      }
+      .menu-button:hover {
+        background-color: #593d2e;
+      }
+    </style>
   </head>
   <body>
-    <h1>selamat datang di TerraSafaria!</h1>
-    <p>Kopi, sistem, dan suasana yang lo banget ☕✨</p>
+    <h1>Selamat Datang di TerraSafaria!</h1>
+    <p>Kopi yang diracik dengan sistem, jiwa, dan cinta ☕</p>
+
+    <button class="menu-button">Lihat Menu</button>
   </body>
 </html>
