--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <h1>Selamat Datang di TerraSafaria!</h1>
-    <p>Kopi yang diracik dengan sistem, jiwa, dan cinta ☕</p>
+    <p>Menikmati kopi pahit sambil di temani oleh riuhnya pepohonan ☕</p>
 
     <button class="menu-button">Lihat Menu</button>
   </body>
