--- a/index.html
+++ b/index.html
@@ -3,41 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <title>TerraSafaria Coffee</title>
-    <style>
-      body {
-        font-family: 'Segoe UI', sans-serif;
-        background-color: #fef9f4;
-        color: #3e2f21;
-        text-align: center;
-        padding: 40px;
-      }
-      h1 {
-        font-size: 3em;
-        margin-bottom: 10px;
-      }
-      p {
-        font-size: 1.2em;
-        margin-top: 5px;
-      }
-      .menu-button {
-        margin-top: 30px;
-        padding: 12px 24px;
-        font-size: 1em;
-        background-color: #6f4e37;
-        color: white;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-      }
-      .menu-button:hover {
-        background-color: #593d2e;
-      }
-    </style>
+   <style>
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #fcf9f4;
+    color: #2e2e2e;
+    text-align: center;
+    padding: 40px;
+  }
+
+  h1 {
+    font-size: 30px;
+    margin-bottom: 10px;
+  }
+
+  h4 {
+    font-size: 20px;
+    margin-top: 5px;
+  }
+
+  p {
+    font-size: 16px;
+    margin-top: 2px;
+  }
+
+  .menu-button {
+    display: inline-block;
+    margin-top: 30px;
+    padding: 12px 24px;
+    font-size: 16px;
+    background-color: #66b3ff;
+    color: white;
+    text-decoration: none;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+
+  .menu-button:hover {
+    background-color: #559ad6;
+  }
+</style>
   </head>
   <body>
     <h1>Selamat Datang di TerraSafaria!</h1>
     <p>Menikmati kopi pahit sambil di temani oleh riuhnya pepohonan ☕</p>
 
-    <button class="menu-button">Lihat Menu</button>
+    <a href="menu.html" class="menu-button">Lihat Menu</a>
   </body>
 </html>
