--- a/index.html
+++ b/index.html
@@ -3,52 +3,81 @@
   <head>
     <meta charset="UTF-8" />
     <title>TerraSafaria Coffee</title>
-   <style>
-  body {
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #fcf9f4;
-    color: #2e2e2e;
-    text-align: center;
-    padding: 40px;
-  }
+    <style>
+      body {
+        margin: 0;
+        font-family: 'Segoe UI', sans-serif;
+        background-color: #fdf8f2;
+        color: #2f2f2f;
+      }
 
-  h1 {
-    font-size: 30px;
-    margin-bottom: 10px;
-  }
+      .hero {
+        background-image: url('banner.jpg');
+        background-size: cover;
+        background-position: center;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: #ffffff;
+        text-shadow: 0 0 10px rgba(0,0,0,0.6);
+      }
 
-  h4 {
-    font-size: 20px;
-    margin-top: 5px;
-  }
+      .hero h1 {
+        font-size: 3em;
+        margin: 0;
+      }
 
-  p {
-    font-size: 16px;
-    margin-top: 2px;
-  }
+      .hero p {
+        font-size: 1.2em;
+        margin-top: 10px;
+      }
 
-  .menu-button {
-    display: inline-block;
-    margin-top: 30px;
-    padding: 12px 24px;
-    font-size: 16px;
-    background-color: #66b3ff;
-    color: white;
-    text-decoration: none;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-  }
+      .content {
+        text-align: center;
+        padding: 40px 20px;
+        max-width: 800px;
+        margin: auto;
+      }
 
-  .menu-button:hover {
-    background-color: #559ad6;
-  }
-</style>
+      .quote {
+        font-style: italic;
+        color: #4b6046;
+        margin-top: 20px;
+        margin-bottom: 40px;
+      }
+
+      .menu-button {
+        display: inline-block;
+        padding: 14px 28px;
+        font-size: 1em;
+        background-color: #6f4a37;
+        color: white;
+        text-decoration: none;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+
+      .menu-button:hover {
+        background-color: #59392d;
+      }
+    </style>
   </head>
   <body>
-    <h1>Selamat Datang di TerraSafaria!</h1>
-    <p>Menikmati kopi pahit sambil di temani oleh riuhnya pepohonan ☕</p>
+    <div class="hero">
+      <h1>TerraSafaria Coffee</h1>
+      <p>Rasa yang bernyawa, kopi yang bermakna.</p>
+    </div>
 
-    <a href="menu.html" class="menu-button">Lihat Menu</a>
-  </body>
+    <div class="content">
+      <div class="quote">"Kopi bukan sekadar minuman—ia adalah cara kami merayakan kehidupan, satu tegukan dalam ketenangan."</div>
+
+      <p>TerraSafaria adalah tempat di mana kopi bertemu sistem, estetika, dan kehangatan. Kami meracik bukan hanya rasa, tapi juga pengalaman yang meninggalkan jejak.</p>
+
+      <a href="menu.html" class="menu-button">Lihat Menu</a>
+    </div>
+  </body>
 </html>
