--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
 
       .hero {
-        background-image: url('images/banner-web.jpg');
+        background-image: url('banner-web.jpg');
         background-size: cover;
         background-position: center;
         height: 400px;
