--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     </div>
 
     <div class="content">
-      <div class="quote">"Kopi bukan sekadar minuman—ia adalah cara kami merayakan kehidupan, satu tegukan dalam ketenangan."</div>
+      <div class="quote">"Kopi memang pahit tapi itu adalah cara kami merasakan kehidupan, satu tegukan dalam ketenangan."</div>
 
-      <p>TerraSafaria adalah tempat di mana kopi bertemu sistem, estetika, dan kehangatan. Kami meracik bukan hanya rasa, tapi juga pengalaman yang meninggalkan jejak.</p>
+      <p>TerraSafaria adalah tempat di mana kopi bertemu dengan sistem, estetika, dan kehangatan. Kami meracik bukan hanya rasa, tapi juga pengalaman yang meninggalkan jejak.</p>
 
       <a href="menu.html" class="menu-button">Lihat Menu</a>
     </div>
