--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: #fdf8f2;
-      color: #2f2f2f;
+      overflow-x: hidden;
     }
 
     .hero {
-      background-image: url('banner-web.jpg'); /* Pastikan file ini ada di repo */
+      background-image: url('banner-web.jpg');
       background-size: cover;
       background-position: center;
       height: 400px;
@@ -39,7 +39,7 @@
       padding: 40px 20px;
       max-width: 800px;
       margin: auto;
-      background-color: #E5D2B8; /* Warna elegan sesuai permintaan */
+      background-color: #E5D2B8;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
@@ -69,9 +69,8 @@
       background-color: #59392d;
     }
 
-    /* Pop-up box styling */
+    /* Pop-up */
     .popup {
-      display: none;
       position: fixed;
       top: 50%;
       left: 50%;
@@ -83,6 +82,7 @@
       z-index: 999;
       text-align: center;
       font-size: 1.2em;
+      display: none;
     }
 
     .popup.show {
@@ -90,12 +90,7 @@
       animation: fadeIn 0.5s ease;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translate(-50%, -60%); }
-      to { opacity: 1; transform: translate(-50%, -50%); }
-    }
-
-    .popup-close {
+    .popup button {
       margin-top: 20px;
       background-color: #6f4a37;
       color: white;
@@ -104,25 +99,53 @@
       border-radius: 8px;
       cursor: pointer;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translate(-50%, -60%); }
+      to { opacity: 1; transform: translate(-50%, -50%); }
+    }
+
+    /* Slide 2 section */
+    .slide-section {
+      position: absolute;
+      top: 100vh;
+      left: 0;
+      width: 100%;
+      background-color: #fffdf7;
+      padding: 80px 20px;
+      box-sizing: border-box;
+      opacity: 0;
+      transform: translateY(100px);
+      transition: all 1s ease;
+      text-align: center;
+    }
+
+    .slide-section.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
   </style>
 </head>
 <body>
   <div class="hero">
     <h1>TerraSafaria Coffee</h1>
-    <p>Rasa yang bernyawa, kopi yang bermakna.</p>
+    <p>Find your chill here, with a cup of coffee.</p>
   </div>
 
   <div class="content">
     <div class="quote">"Kopi memang pahit tapi itu adalah cara kami merasakan kehidupan, satu tegukan dalam ketenangan."</div>
-
     <p>TerraSafaria adalah tempat di mana kopi bertemu sistem, estetika, dan kehangatan. Kami meracik bukan hanya rasa, tapi juga pengalaman yang meninggalkan jejak.</p>
-
     <button class="start-button" onclick="showPopup()">Start</button>
   </div>
 
   <div id="popupBox" class="popup">
     ☕ Selamat datang di pengalaman penuh rasa bersama TerraSafaria!
-    <br /><button class="popup-close" onclick="hidePopup()">Tutup</button>
+    <br /><button onclick="goToSlide()">Next</button>
+  </div>
+
+  <div id="slide2" class="slide-section">
+    <h2>📘 Biografi TerraSafaria</h2>
+    <p>[Cerita asal-usul kafe lo akan muncul di sini nanti, Bro!]</p>
   </div>
 
   <script>
@@ -130,8 +153,10 @@
       document.getElementById('popupBox').classList.add('show');
     }
 
-    function hidePopup() {
-      document.getElementById('popupBox').classList.remove('show');
+    function goToSlide() {
+      document.getElementById('popupBox').style.display = 'none';
+      document.getElementById('slide2').classList.add('show');
+      window.scrollTo({ top: window.innerHeight, behavior: 'smooth' });
     }
   </script>
 </body>
