--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
       font-size: 1em;
       background-color: #6f4a37;
       color: white;
-      text-decoration: none;
       border: none;
       border-radius: 10px;
       cursor: pointer;
@@ -69,7 +68,6 @@
       background-color: #59392d;
     }
 
-    /* Pop-up */
     .popup {
       position: fixed;
       top: 50%;
@@ -105,14 +103,13 @@
       to { opacity: 1; transform: translate(-50%, -50%); }
     }
 
-    /* Slide 2 section */
     .slide-section {
       position: absolute;
       top: 100vh;
       left: 0;
       width: 100%;
       background-color: #fffdf7;
-      padding: 80px 20px;
+      padding: 60px 20px;
       box-sizing: border-box;
       opacity: 0;
       transform: translateY(100px);
@@ -124,28 +121,46 @@
       opacity: 1;
       transform: translateY(0);
     }
+
+    .slide-section h2 {
+      color: #6f4a37;
+      margin-bottom: 20px;
+    }
+
+    .slide-section p {
+      max-width: 800px;
+      margin: auto;
+      font-size: 1em;
+      line-height: 1.6;
+      color: #3e2f21;
+    }
   </style>
 </head>
 <body>
   <div class="hero">
     <h1>TerraSafaria Coffee</h1>
-    <p>Find your chill here, with a cup of coffee.</p>
+    <p>Rasa yang bernyawa, kopi yang bermakna.</p>
   </div>
 
   <div class="content">
-    <div class="quote">"Kopi memang pahit tapi itu adalah cara kami merasakan kehidupan, satu tegukan dalam ketenangan."</div>
-    <p>TerraSafaria adalah tempat di mana kopi bertemu sistem, estetika, dan kehangatan. Kami meracik bukan hanya rasa, tapi juga pengalaman yang meninggalkan jejak.</p>
+    <div class="quote">"Kopi memang pahit, tapi itu cara kami merasakan kehidupan—satu tegukan dalam ketenangan."</div>
+    <p>TerraSafaria adalah tempat di mana kopi bertemu sistem, estetika, dan kehangatan. Kami meracik bukan hanya rasa, tapi pengalaman yang meninggalkan jejak.</p>
     <button class="start-button" onclick="showPopup()">Start</button>
   </div>
 
   <div id="popupBox" class="popup">
-    ☕ Selamat datang di pengalaman penuh rasa bersama TerraSafaria!
+    ☕ Selamat datang di perjalanan penuh rasa bersama TerraSafaria!
     <br /><button onclick="goToSlide()">Next</button>
   </div>
 
   <div id="slide2" class="slide-section">
     <h2>📘 Biografi TerraSafaria</h2>
-    <p>[Cerita asal-usul kafe lo akan muncul di sini nanti, Bro!]</p>
+    <p>
+      Nama <strong>TerraSafaria</strong> berasal dari dua kata: <em>“Terra”</em> yang berarti bumi dalam bahasa Latin, dan <em>“Safaria”</em> dari kata Safari dalam bahasa Swahili, yang berarti perjalanan. Filosofi di balik nama ini adalah menghadirkan sebuah petualangan rasa dan ketenangan di lokasi yang tersembunyi namun kaya pengalaman. <br><br>
+      Berlokasi di Kampung Bubulak RT 004/RW 004, Masjid Attaqwa, Jl. H. Sanip 2, Bojong Kulur, Gunung Putri, Bogor—TerraSafaria dibangun di tengah suasana kampung dan mengusung konsep <strong>Tradisional Naturalis</strong> untuk menghadirkan nuansa syahdu dan romantis. Pengunjung bisa menikmati berbagai sajian, mulai dari kopi khas hingga makanan tradisional Indonesia dan Western. <br><br>
+      Awalnya, tempat ini adalah <strong>Gallery Vivarium pribadi</strong>, namun atas saran banyak pihak, kami mengubahnya menjadi ruang diskusi dan bersantai yang membawa sepotong keindahan alam ke tengah kota. <br><br>
+      Terinspirasi oleh banyaknya orang yang merasa penat karena rutinitas, TerraSafaria hadir untuk memberikan pelarian. Kami percaya: <em>“Alam selalu punya caranya sendiri untuk membuat manusia merasa tenang dan nyaman—dan membuat mereka yang menghampirinya merasa lega dan lepas, walaupun hanya untuk sesaat.”</em>
+    </p>
   </div>
 
   <script>
