--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 </head>
 <body>
   <div class="hero">
-    <img src="logo.png" alt="TerraSafaria Logo" />
+    <img src="Logo.png" alt="TerraSafaria Logo" />
     <h1>TerraSafaria</h1>
     <p>Rasa yang bernyawa, kopi yang bermakna.</p>
   </div>
@@ -163,7 +163,7 @@
   </div>
 
   <div id="slide2" class="slide-section">
-    <h2>📘 Biografi TerraSafaria</h2>
+    <h2>📘 About TerraSafaria!</h2>
     <p>
       Nama <strong>TerraSafaria</strong> berasal dari dua kata: <em>“Terra”</em> yang berarti bumi dalam bahasa Latin, dan <em>“Safaria”</em> dari kata Safari dalam bahasa Swahili, yang berarti perjalanan. Filosofi di balik nama ini adalah menghadirkan sebuah petualangan rasa dan ketenangan di lokasi yang tersembunyi namun kaya pengalaman. <br><br>
       Berlokasi di Kampung Bubulak RT 004/RW 004, Masjid Attaqwa, Jl. H. Sanip 2, Bojong Kulur, Gunung Putri, Bogor—TerraSafaria dibangun di tengah suasana kampung dan mengusung konsep <strong>Tradisional Naturalis</strong> untuk menghadirkan nuansa syahdu dan romantis. Pengunjung bisa menikmati berbagai sajian, mulai dari kopi khas hingga makanan tradisional Indonesia dan Western. <br><br>
