--- a/index.html
+++ b/index.html
@@ -26,10 +26,23 @@
     }
 
     .hero img {
-      width: 100px;
-      height: auto;
-      margin-bottom: 15px;
-      filter: drop-shadow(0 0 5px rgba(0,0,0,0.4));
+     .hero img {
+  width: 110px;
+  height: auto;
+  margin-bottom: 10px;
+  filter: drop-shadow(0 0 5px rgba(0,0,0,0.4));
+  opacity: 0;
+  transform: scale(0.8);
+  animation: fadeLogo 1s ease-out forwards;
+  animation-delay: 0.6s;
+}
+
+@keyframes fadeLogo {
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
     }
 
     .hero h1 {
