--- a/index.html
+++ b/index.html
@@ -24,24 +24,12 @@
       text-shadow: 0 0 10px rgba(0,0,0,0.6);
       padding-top: 20px;
     }
-    
-     .hero img {
-  width: 110px;
-  height: auto;
-  margin-bottom: 10px;
-  filter: drop-shadow(0 0 5px rgba(0,0,0,0.4));
-  opacity: 0;
-  transform: scale(0.8);
-  animation: fadeLogo 1s ease-out forwards;
-  animation-delay: 0.6s;
-}
 
-@keyframes fadeLogo {
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
+    .hero img {
+      width: 100px;
+      height: auto;
+      margin-bottom: 15px;
+      filter: drop-shadow(0 0 5px rgba(0,0,0,0.4));
     }
 
     .hero h1 {
@@ -159,7 +147,7 @@
 <body>
   <div class="hero">
     <img src="Logo.png" alt="TerraSafaria Logo" />
-    <h1>TerraSafaria</h1>
+    <h1>TerraSafaria!</h1>
     <p>Rasa yang bernyawa, kopi yang bermakna.</p>
   </div>
 
@@ -175,7 +163,7 @@
   </div>
 
   <div id="slide2" class="slide-section">
-    <h2>📘 About TerraSafaria!</h2>
+    <h2>About TerraSafaria!</h2>
     <p>
       Nama <strong>TerraSafaria</strong> berasal dari dua kata: <em>“Terra”</em> yang berarti bumi dalam bahasa Latin, dan <em>“Safaria”</em> dari kata Safari dalam bahasa Swahili, yang berarti perjalanan. Filosofi di balik nama ini adalah menghadirkan sebuah petualangan rasa dan ketenangan di lokasi yang tersembunyi namun kaya pengalaman. <br><br>
       Berlokasi di Kampung Bubulak RT 004/RW 004, Masjid Attaqwa, Jl. H. Sanip 2, Bojong Kulur, Gunung Putri, Bogor—TerraSafaria dibangun di tengah suasana kampung dan mengusung konsep <strong>Tradisional Naturalis</strong> untuk menghadirkan nuansa syahdu dan romantis. Pengunjung bisa menikmati berbagai sajian, mulai dari kopi khas hingga makanan tradisional Indonesia dan Western. <br><br>
