--- a/index.html
+++ b/index.html
@@ -26,10 +26,23 @@
     }
 
     .hero img {
-      width: 100px;
+      width: 110px;
       height: auto;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
       filter: drop-shadow(0 0 5px rgba(0,0,0,0.4));
+      opacity: 0;
+  transform: scale(0.8);
+  animation: fadeLogo 1s ease-out forwards;
+  animation-delay: 0.6s;
+}
+
+@keyframes fadeLogo {
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
     }
 
     .hero h1 {
@@ -147,7 +160,7 @@
 <body>
   <div class="hero">
     <img src="Logo.png" alt="TerraSafaria Logo" />
-    <h1>TerraSafaria!</h1>
+    <h1>TerraSafaria</h1>
     <p>Rasa yang bernyawa, kopi yang bermakna.</p>
   </div>
 
