--- a/index.html
+++ b/index.html
@@ -46,9 +46,20 @@
     }
 
     .hero h1 {
-      font-size: 3em;
+      font-size: 3.2em;
       margin: 0;
-    }
+      opacity: 0;
+  transform: translateY(20px);
+  animation: slideUpTitle 1s ease-out forwards;
+  animation-delay: 0.6s;
+}
+
+@keyframes slideUpTitle {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
     .hero p {
       font-size: 1.2em;
