--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>TerraSafaria Coffee</title>
+  <link href="https://fonts.googleapis.com/css2?family=six+caps&display+swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -52,6 +53,9 @@
   transform: translateY(20px);
   animation: slideUpTitle 1s ease-out forwards;
   animation-delay: 0.6s;
+      font-family: 'Six Caps', sans-serif;
+      letter-spacing: 6px;
+      text-transform: uppercase;
 }
 
 @keyframes slideUpTitle {
