--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>TerraSafaria Coffee</title>
+  <title>TerraSafaria</title>
   <link href="https://fonts.googleapis.com/css2?family=six+caps&display+swap" rel="stylesheet">
   <style>
     body {
