--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
   transform: translateY(20px);
   animation: slideUpTitle 1s ease-out forwards;
   animation-delay: 0.6s;
-      font-family: 'Six Caps', sans-serif;
-      letter-spacing: 6px;
-      text-transform: uppercase;
+  font-family: 'Six Caps', sans-serif;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  color: #ffffff;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
 
 @keyframes slideUpTitle {
