--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>TerraSafaria</title>
-  <link href="https://fonts.googleapis.com/css2?family=six+caps&display+swap" rel="stylesheet">
+
+  <!-- ✅ FONT SIX CAPS GOOGLE YANG VALID -->
+  <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
@@ -21,9 +24,9 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      padding-top: 20px;
       color: #ffffff;
       text-shadow: 0 0 10px rgba(0,0,0,0.6);
-      padding-top: 20px;
     }
 
     .hero img {
@@ -32,40 +35,38 @@
       margin-bottom: 10px;
       filter: drop-shadow(0 0 5px rgba(0,0,0,0.4));
       opacity: 0;
-  transform: scale(0.8);
-  animation: fadeLogo 1s ease-out forwards;
-  animation-delay: 0.6s;
-}
+      transform: scale(0.8);
+      animation: fadeLogo 1s ease-out forwards;
+      animation-delay: 0.6s;
+    }
 
-@keyframes fadeLogo {
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
+    @keyframes fadeLogo {
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
 
     .hero h1 {
       font-size: 3.2em;
       margin: 0;
       opacity: 0;
-  transform: translateY(20px);
-  animation: slideUpTitle 1s ease-out forwards;
-  animation-delay: 0.6s;
-  font-family: 'Six Caps', sans-serif;
-  letter-spacing: 6px;
-  text-transform: uppercase;
-  color: #ffffff;
-      text-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
-}
+      transform: translateY(20px);
+      animation: slideUpTitle 1s ease-out forwards;
+      animation-delay: 0.6s;
+      font-family: 'Six Caps', sans-serif;
+      letter-spacing: 6px;
+      text-transform: uppercase;
+      color: #ffffff;
+      text-shadow: 0 0 10px rgba(0,0,0,0.6);
+    }
 
-@keyframes slideUpTitle {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+    @keyframes slideUpTitle {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
     .hero p {
       font-size: 1.2em;
@@ -194,12 +195,7 @@
 
   <div id="slide2" class="slide-section">
     <h2>About TerraSafaria!</h2>
-    <p>
-      Nama <strong>TerraSafaria</strong> berasal dari dua kata: <em>“Terra”</em> yang berarti bumi dalam bahasa Latin, dan <em>“Safaria”</em> dari kata Safari dalam bahasa Swahili, yang berarti perjalanan. Filosofi di balik nama ini adalah menghadirkan sebuah petualangan rasa dan ketenangan di lokasi yang tersembunyi namun kaya pengalaman. <br><br>
-      Berlokasi di Kampung Bubulak RT 004/RW 004, Masjid Attaqwa, Jl. H. Sanip 2, Bojong Kulur, Gunung Putri, Bogor—TerraSafaria dibangun di tengah suasana kampung dan mengusung konsep <strong>Tradisional Naturalis</strong> untuk menghadirkan nuansa syahdu dan romantis. Pengunjung bisa menikmati berbagai sajian, mulai dari kopi khas hingga makanan tradisional Indonesia dan Western. <br><br>
-      Awalnya, tempat ini adalah <strong>Gallery Vivarium pribadi</strong>, namun atas saran banyak pihak, kami mengubahnya menjadi ruang diskusi dan bersantai yang membawa sepotong keindahan alam ke tengah kota. <br><br>
-      Terinspirasi oleh banyaknya orang yang merasa penat karena rutinitas, TerraSafaria hadir untuk memberikan pelarian. Kami percaya: <em>“Alam selalu punya caranya sendiri untuk membuat manusia merasa tenang dan nyaman—dan membuat mereka yang menghampirinya merasa lega dan lepas, walaupun hanya untuk sesaat.”</em>
-    </p>
+    <p>...</p>
   </div>
 
   <script>
