--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>TerraSafaria</title>
 
   <!-- ✅ FONT SIX CAPS GOOGLE YANG VALID -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -48,17 +48,17 @@
     }
 
     .hero h1 {
-      font-size: 2.8em;
+      font-size: 3.2em;
       margin: 0;
       opacity: 0;
       transform: translateY(20px);
       animation: slideUpTitle 1s ease-out forwards;
       animation-delay: 0.6s;
-      font-family: 'Playfair Display', serif;
-      letter-spacing: 2px;
-      text-transform: none;
+      font-family: 'Six Caps', sans-serif;
+      letter-spacing: 16px;
+      text-transform: uppercase;
       color: #ffffff;
-      text-shadow: 0 0 8px rgba(0,0,0,0.5);
+      text-shadow: 0 0 10px rgba(0,0,0,0.6);
     }
 
     @keyframes slideUpTitle {
