--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>TerraSafaria</title>
 
-  <!-- ✅ FONT SIX CAPS GOOGLE YANG VALID -->
+  <!-- ✅ FONT SIX CAPS -->
   <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
 
   <style>
@@ -16,7 +16,7 @@
     }
 
     .hero {
-      background-image: url('banner-web.jpg');
+      background-image: url('banner-web.jpg'); /* Gambar banner café lo */
       background-size: cover;
       background-position: center;
       height: 460px;
@@ -48,7 +48,7 @@
     }
 
     .hero h1 {
-      font-size: 3.2em;
+      font-size: 3em;
       margin: 0;
       opacity: 0;
       transform: translateY(20px);
@@ -172,6 +172,7 @@
       font-size: 1em;
       line-height: 1.6;
       color: #3e2f21;
+      text-align: justify;
     }
   </style>
 </head>
@@ -195,7 +196,12 @@
 
   <div id="slide2" class="slide-section">
     <h2>About TerraSafaria!</h2>
-    <p>...</p>
+    <p>
+      Nama <strong>TerraSafaria</strong> berasal dari dua kata: <em>“Terra”</em> yang berarti bumi dalam bahasa Latin, dan <em>“Safaria”</em> dari kata Safari dalam bahasa Swahili, yang berarti perjalanan. Filosofi di balik nama ini adalah menghadirkan sebuah petualangan rasa dan ketenangan di lokasi yang tersembunyi namun kaya pengalaman.<br><br>
+      Berlokasi di Kampung Bubulak RT 004/RW 004, Masjid Attaqwa, Jl. H. Sanip 2, Bojong Kulur, Gunung Putri, Bogor—TerraSafaria dibangun di tengah suasana kampung dan mengusung konsep <strong>Tradisional Naturalis</strong> untuk menghadirkan nuansa syahdu dan romantis. Pengunjung bisa menikmati berbagai sajian, mulai dari kopi khas hingga makanan tradisional Indonesia dan Western.<br><br>
+      Awalnya, tempat ini adalah <strong>Gallery Vivarium pribadi</strong>, namun atas saran banyak pihak, kami mengubahnya menjadi ruang diskusi dan bersantai yang membawa sepotong keindahan alam ke tengah kota.<br><br>
+      Terinspirasi oleh banyaknya orang yang merasa penat karena rutinitas, TerraSafaria hadir untuk memberikan pelarian. Kami percaya:<br><em>“Alam selalu punya caranya sendiri untuk membuat manusia merasa tenang dan nyaman—dan membuat mereka yang menghampirinya merasa lega dan lepas, walaupun hanya untuk sesaat.”</em>
+    </p>
   </div>
 
   <script>
