--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
     }
 
     .hero h1 {
-      font-size: 3em;
+      font-size: 2.4em;
       margin: 0;
       opacity: 0;
       transform: translateY(20px);
       animation: slideUpTitle 1s ease-out forwards;
       animation-delay: 0.6s;
       font-family: 'Six Caps', sans-serif;
-      letter-spacing: 16px;
+      letter-spacing: 20px;
       text-transform: uppercase;
-      color: #ffffff;
-      text-shadow: 0 0 10px rgba(0,0,0,0.6);
+      color: #fdfdfd;
+      text-shadow: 0 0 6px rgba(0,0,0,0.4);
     }
 
     @keyframes slideUpTitle {
