--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>TerraSafaria</title>
-
-  <!-- ✅ FONT SIX CAPS -->
   <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
-
   <style>
     body {
       margin: 0;
@@ -15,10 +12,9 @@
       overflow-x: hidden;
     }
 
+    /* HERO SECTION */
     .hero {
-      background-image: url('banner-web.jpg'); /* Gambar banner café lo */
-      background-size: cover;
-      background-position: center;
+      position: relative;
       height: 460px;
       display: flex;
       flex-direction: column;
@@ -27,6 +23,26 @@
       padding-top: 20px;
       color: #ffffff;
       text-shadow: 0 0 10px rgba(0,0,0,0.6);
+      overflow: hidden;
+    }
+
+    .hero::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('banner-web.jpg'); /* Ganti sesuai foto lo */
+      background-size: cover;
+      background-position: center;
+      filter: blur(6px);
+      transform: scale(1.05);
+      z-index: 0;
+    }
+
+    .hero > * {
+      position: relative;
+      z-index: 1;
     }
 
     .hero img {
@@ -48,17 +64,16 @@
     }
 
     .hero h1 {
-      font-size: 2.4em;
-      margin: 0;
+      font-size: 2.8em;
+      font-family: 'Six Caps', sans-serif;
+      letter-spacing: 16px;
+      text-transform: uppercase;
+      color: #fff;
       opacity: 0;
       transform: translateY(20px);
       animation: slideUpTitle 1s ease-out forwards;
       animation-delay: 0.6s;
-      font-family: 'Six Caps', sans-serif;
-      letter-spacing: 20px;
-      text-transform: uppercase;
-      color: #fdfdfd;
-      text-shadow: 0 0 6px rgba(0,0,0,0.4);
+      margin: 0;
     }
 
     @keyframes slideUpTitle {
@@ -73,6 +88,7 @@
       margin-top: 10px;
     }
 
+    /* CONTENT SECTION */
     .content {
       text-align: center;
       padding: 40px 20px;
@@ -107,6 +123,7 @@
       background-color: #59392d;
     }
 
+    /* POPUP */
     .popup {
       position: fixed;
       top: 50%;
@@ -142,18 +159,15 @@
       to { opacity: 1; transform: translate(-50%, -50%); }
     }
 
+    /* SLIDE SECTIONS */
     .slide-section {
-      position: absolute;
-      top: 100vh;
-      left: 0;
-      width: 100%;
-      background-color: #fffdf7;
       padding: 60px 20px;
+      background-color: #fffdf7;
       box-sizing: border-box;
+      text-align: center;
       opacity: 0;
       transform: translateY(100px);
       transition: all 1s ease;
-      text-align: center;
     }
 
     .slide-section.show {
@@ -162,8 +176,12 @@
     }
 
     .slide-section h2 {
+      font-family: 'Six Caps', sans-serif;
+      font-size: 2em;
+      letter-spacing: 16px;
+      text-transform: uppercase;
+      margin-bottom: 30px;
       color: #6f4a37;
-      margin-bottom: 20px;
     }
 
     .slide-section p {
@@ -174,46 +192,64 @@
       color: #3e2f21;
       text-align: justify;
     }
+
+    /* SPOT CARD STYLE */
+    .spot {
+      background-color: #fdf8f2;
+      border-left: 6px solid #6f4a37;
+      padding: 20px;
+      margin: 30px auto;
+      max-width: 700px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      text-align: left;
+    }
+
+    .spot img {
+      width: 100%;
+      border-radius: 8px;
+      margin-bottom: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+
+    .spot h3 {
+      color: #6f4a37;
+      margin-bottom: 10px;
+      font-size: 1.4em;
+    }
+
+    .spot p {
+      font-size: 1em;
+      color: #3e2f21;
+      line-height: 1.6;
+    }
   </style>
 </head>
 <body>
+  <!-- HERO -->
   <div class="hero">
     <img src="Logo.png" alt="TerraSafaria Logo" />
     <h1>TerraSafaria</h1>
     <p>Rasa yang bernyawa, kopi yang bermakna.</p>
   </div>
 
+  <!-- BIOGRAFI -->
   <div class="content">
     <div class="quote">"Kopi memang pahit, tapi itu cara kami merasakan kehidupan—satu tegukan dalam ketenangan."</div>
-    <p>TerraSafaria adalah tempat di mana kopi bertemu sistem, estetika, dan kehangatan. Kami meracik bukan hanya rasa, tapi pengalaman yang meninggalkan jejak.</p>
+    <p>
+      Nama <strong>TerraSafaria</strong> berasal dari dua kata: “Terra” (bumi dalam bahasa Latin) dan “Safaria” (dari Safari – Swahili: perjalanan). Filosofinya adalah menghadirkan petualangan rasa dan ketenangan di lokasi tersembunyi yang kaya pengalaman.
+      Berlokasi di Kampung Bubulak RT 004/RW 004, Masjid Attaqwa, Bojong Kulur—kafe ini mengusung konsep <strong>Tradisional Naturalis</strong>, menyatu dengan alam kampung dan menghadirkan nuansa syahdu serta romantis. Dari kopi khas hingga makanan tradisional Indonesia dan Western, semuanya tersaji dengan kehangatan.
+    </p>
     <button class="start-button" onclick="showPopup()">Start</button>
   </div>
 
+  <!-- POPUP -->
   <div id="popupBox" class="popup">
     ☕️ Selamat datang di perjalanan penuh rasa bersama TerraSafaria!
     <br /><button onclick="goToSlide()">Next</button>
   </div>
 
-  <div id="slide2" class="slide-section">
-    <h2>About TerraSafaria!</h2>
-    <p>
-      Nama <strong>TerraSafaria</strong> berasal dari dua kata: <em>“Terra”</em> yang berarti bumi dalam bahasa Latin, dan <em>“Safaria”</em> dari kata Safari dalam bahasa Swahili, yang berarti perjalanan. Filosofi di balik nama ini adalah menghadirkan sebuah petualangan rasa dan ketenangan di lokasi yang tersembunyi namun kaya pengalaman.<br><br>
-      Berlokasi di Kampung Bubulak RT 004/RW 004, Masjid Attaqwa, Jl. H. Sanip 2, Bojong Kulur, Gunung Putri, Bogor—TerraSafaria dibangun di tengah suasana kampung dan mengusung konsep <strong>Tradisional Naturalis</strong> untuk menghadirkan nuansa syahdu dan romantis. Pengunjung bisa menikmati berbagai sajian, mulai dari kopi khas hingga makanan tradisional Indonesia dan Western.<br><br>
-      Awalnya, tempat ini adalah <strong>Gallery Vivarium pribadi</strong>, namun atas saran banyak pihak, kami mengubahnya menjadi ruang diskusi dan bersantai yang membawa sepotong keindahan alam ke tengah kota.<br><br>
-      Terinspirasi oleh banyaknya orang yang merasa penat karena rutinitas, TerraSafaria hadir untuk memberikan pelarian. Kami percaya:<br><em>“Alam selalu punya caranya sendiri untuk membuat manusia merasa tenang dan nyaman—dan membuat mereka yang menghampirinya merasa lega dan lepas, walaupun hanya untuk sesaat.”</em>
-    </p>
-  </div>
-
-  <script>
-    function showPopup() {
-      document.getElementById('popupBox').classList.add('show');
-    }
-
-    function goToSlide() {
-      document.getElementById('popupBox').style.display = 'none';
-      document.getElementById('slide2').classList.add('show');
-      window.scrollTo({ top: window.innerHeight, behavior: 'smooth' });
-    }
-  </script>
-</body>
-</html>
+  <!-- SLIDE 3: AMBIENCE SPOTS -->
+  <div id="slide3" class="slide-section">
+    <h2>Tata Letak TerraSafaria</h2>
+    <p>TerraSafaria terbagi menjadi 4 spot utama yang punya karakter ambience berbeda, sesuai dengan
