--- a/index.html
+++ b/index.html
@@ -217,3 +217,30 @@
   </script>
 </body>
 </html>
+
+<!-- Slide 2: Pengantar ambience -->
+<section class="slide pengantar">
+  <h2>3 Spot Unik di TerraSafaria</h2>
+  <p>Setiap sudut punya cerita sendiri—intim, earthy, atau playful. Scroll yuk...</p>
+</section>
+
+<!-- Slide 3: Spot Tropis -->
+<section class="slide spot">
+  <img src="foto-spot1.jpg" alt="Spot Tropis" />
+  <h3>Spot Tropis</h3>
+  <p>Suasana rimbun dan segar, cocok buat ngobrol santai, kerja ringan, atau rebahan digital bareng suara dedaunan.</p>
+</section>
+
+<!-- Slide 4: Spot Industrial Elegan -->
+<section class="slide spot">
+  <img src="foto-spot2.jpg" alt="Spot Industrial" />
+  <h3>Spot Industrial Elegan</h3>
+  <p>Sentuhan bata, baja, dan pencahayaan hangat bikin suasana jadi classy tapi tetap cozy—favorit digital barista!</p>
+</section>
+
+<!-- Slide 5: Spot Earthy & Mindful -->
+<section class="slide spot">
+  <img src="foto-spot3.jpg" alt="Spot Earthy" />
+  <h3>Spot Earthy & Mindful</h3>
+  <p>Nuansa kayu, tanaman hias, dan aroma tenang—tempat yang pas buat refleksi, ngopi pelan-pelan, dan recharge jiwa.</p>
+</section>
