--- a/index.html
+++ b/index.html
@@ -220,8 +220,13 @@
 
 <!-- Slide 2: Pengantar ambience -->
 <section class="slide pengantar">
-  <h2>3 Spot Unik di TerraSafaria</h2>
-  <p>Setiap sudut punya cerita sendiri—intim, earthy, atau playful. Scroll yuk...</p>
+  <h2>3 Spotted on TerraSafaria</h2>
+  <p>TerraSafaria menawarkan tiga area unik untuk bersantai, masin-masing menghadirkan suasana yang berbeda dan pengalaman yang tak terlupakan. apakah kamu sedang mencari ketenangan, kenyamanan semi-indoor, atau vibe yang penuh gaya di sini, kamu tinggal memilih spot favoritmu dan nikmati suasana yang pas dengan mood hari itu.</p>
+  <div class="gallery">
+    <img src="foto-spot1.jpg" alt="bar semi-indoor" />
+     <img src="foto-spot2.jpg" alt="bar semi-indoor" />
+     <img src="foto-spot3.jpg" alt="bar semi-indoor" />
+  </div>
 </section>
 
 <!-- Slide 3: Spot Tropis -->
