--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
   <h2>3 Spotted on TerraSafaria</h2>
   <p>TerraSafaria menawarkan tiga area unik untuk bersantai, masin-masing menghadirkan suasana yang berbeda dan pengalaman yang tak terlupakan. apakah kamu sedang mencari ketenangan, kenyamanan semi-indoor, atau vibe yang penuh gaya di sini, kamu tinggal memilih spot favoritmu dan nikmati suasana yang pas dengan mood hari itu.</p>
   <div class="gallery">
-    <img src="foto-spot1.jpg" alt="bar semi-indoor" />
-     <img src="foto-spot2.jpg" alt="bar semi-indoor" />
-     <img src="foto-spot3.jpg" alt="bar semi-indoor" />
+    <img src="gallery-bar.jpg" alt="TerraSafaria bar" />
+     <img src="gallery-garden.jpg" alt="TerraSafaria Garden at Night" />
+     <img src="gallery-front.jpg" alt="TerraSafaria at Front Area" />
   </div>
 </section>
 
